# End-to-End-RAG-MLOps-Platform-for-Telecom-Standards

./: .env.example  .gitignore  App.tsx  LICENSE  README.md  evaluate_model.py  ingest_document.py  pyproject.toml  requirements.txt  setup_db.py
.github/workflows/: cd.yml  ci.yml
backend/: evaluate_model.py  ingest_document.py  setup_db.py
backend/docker/: docker-compose.yml
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py  schemas.py
backend/src/database/: models.py
backend/src/generation/: __init__.py  model_loader.py
backend/src/ingestion/: chunker.py  pdf_parser.py
backend/src/mlops/: evaluator.py  metrics.py
backend/src/optimization/: quantizer.py  tensorrt_optimizer.py
components/modules/: AskStandards.tsx  DocumentExplorer.tsx  Evaluation.tsx  Explainability.tsx  Personalization.tsx  SystemMLOps.tsx
data/: test_queries.json
docker/: Dockerfile.api
frontend/: index.css  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/components/: Sidebar.tsx  TopNav.tsx
frontend/lib/: api.ts
src/api/: main.py
src/database/: __init__.py  crud.py
src/explainability/: __init__.py  lime_analyzer.py  shap_analyzer.py
src/generation/: inference.py  qlora_trainer.py
src/ingestion/: __init__.py  embedder.py  metadata_tagger.py
src/mlops/: __init__.py  experiment_tracker.py
src/optimization/: __init__.py  onnx_converter.py
src/personalization/: __init__.py  ranking_model.py
src/retrieval/: __init__.py  hybrid_search.py
src/utils/: __init__.py  config.py
tests/unit/: test_chunker.py
(+19 files in other folders)
